WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
275611
REGRESSION(
280453@main
): [GTK][WPE] Build broken with MEDIA_STREAM disabled
https://bugs.webkit.org/show_bug.cgi?id=275611
Summary
REGRESSION(280453@main): [GTK][WPE] Build broken with MEDIA_STREAM disabled
Miguel Gomez
Reported
2024-06-18 07:42:18 PDT
When MEDIA_STREAM is disabled, the preferences MediaStreamEnabled and MockCaptureDevicesEnabled are not defined, which triggers a build error when calling the FEATURE_DEFAULT macro.
Attachments
Add attachment
proposed patch, testcase, etc.
Miguel Gomez
Comment 1
2024-06-25 02:23:29 PDT
280080@main
was reverted by
https://commits.webkit.org/280276@main
, so this is not happening anymore. Closing.
Miguel Gomez
Comment 2
2024-06-28 05:06:25 PDT
A variant of the initial PR was merged as
280453@main
that has the same problem, so reopening this and setting the new regression revision.
Philippe Normand
Comment 3
2024-06-28 06:23:35 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/30268
EWS
Comment 4
2024-06-28 08:16:28 PDT
Committed
280454@main
(22714bafb93d): <
https://commits.webkit.org/280454@main
> Reviewed commits have been landed. Closing PR #30268 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug