Don't get default values when MEDIA_STREAM is disabled.

Remove when https://bugs.webkit.org/show_bug.cgi?id=275611 is fixed upstream.